Update of Contact Deletion article draft

--- a/docs/usecase/sfmc-contact-deletion.mdx
+++ b/docs/usecase/sfmc-contact-deletion.mdx
@@ -4,18 +4,25 @@ title: SFMC Contact Deletion
 sidebar_label: Contact Deletion Process
 description: Marketing Automation is as good as the database quality behind it. To have good quality you must first remove the bad quality. Let's do it.
 image: img/og/og-image-sfmc-contact-deletion.png
-tags: [Marketing Cloud, SSJS, SQL, Snippet, Data Extensions, Deliverability]
+tags: [Marketing Cloud, Snippet, SSJS, SQL, Data Extensions, Data Management,]
+toc_max_heading_level: 4
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
 
 <LeadText content="Marketing Automation is as good as the database quality behind it. To have good quality you must first remove the bad quality. Let's do it." />
 
+## Outline
+
+1. [Learn everything about SFMC Contact Deletion Process](#contact-deletion-in-sfmc)
+2. [Check out sample segments just waiting to be deleted](#which-contacts-should-be-deleted)
+3. [Create privacy-focused Contact Deletion Archive](#contact-deletion-archive)
+
 ## Contact Deletion in SFMC
 
 Salesforce Marketing Cloud makes Contact Deletion not only easy but also powerful. The out-of-the-box solution does the most of the heavy lifting leaving to us the decision who and when should be deleted from our platform.
 
-So what exactly is the out-of-box SFMC Contact Deletion process doing behind the scenes?
+So what exactly is the built-in SFMC Contact Deletion process doing behind the scenes?
 
 1. It manages __supression period for contacts__ requested for deletion:
     - Suppression in __Contact Builder__ hides the contacts and blocks possibility to create a new one with the same Contact Key.
@@ -32,7 +39,7 @@ So what exactly is the out-of-box SFMC Contact Deletion process doing behind the
     - Automations
     - Einstein
 
-As you can see, a lot built-in. But what is the purpose of the supression period when we just want to delete some contacts?
+As you can see, a lot out-of-the-box. But what is the purpose of the supression period when we just want to delete some contacts?
 
 Contact Deletion is irreversible. Once contact is deleted, it is deleted for good and there is no option to bring it back. Sure, you can add the contact again, but it won't have any of the old data. So, if you are not confident in your Contact Deletion process, you might [configure suppression period](#enable-contact-deletion) to have some time for reflection. That's why it is there by default (currently at 2 days). If you find out a mistake during that period, put a Support ticket as soon as possible with high priority.
 
@@ -54,12 +61,12 @@ It also ignores any data that is not connected to the deleted contact by Contact
 
 To be able to use Contact Deletion Process in Salesforce Marketing Cloud you have to enable it first. To do this, you need to have Marketing Cloud Administrator role.
 
-1. Go to parent Business Unit
-2. Go to Audience Builder » Contact Builder
-3. Click Contacts Configuration in top menu
-4. Enable the process in the Contact Delete section
-5. Configure suppression period by clicking Manage Settings (default is 2 days)
-6. Save
+1. Go to parent Business Unit.
+2. Go to Audience Builder » Contact Builder.
+3. Click Contacts Configuration in top menu.
+4. Enable the process in the Contact Delete section.
+5. Configure suppression period by clicking Manage Settings (default is 2 days).
+6. Save.
 
 If you want the Contact Deletion process to trigger automatically after you start it - set the suppression period to 0 days. It will be added to processing queue instantly after request.
 
@@ -85,11 +92,11 @@ Manual Contact Deletion in Email Studio will remove the contact only from Email 
 
 This method is best if you have just few contacts you want to delete. It's simple, it's fast, it's very limited.
 
-1. Go to parent Business Unit
-2. Go to Audience Builder » Contact Builder
-3. Click All Contacts in top menu
-4. Find a contact(s) you want to delete and click checkboxes next to them
-5. Click trash icon and select Delete selected contacts
+1. Go to parent Business Unit.
+2. Go to Audience Builder » Contact Builder.
+3. Click All Contacts in top menu.
+4. Find a contact(s) you want to delete and click checkboxes next to them.
+5. Click trash icon and select Delete selected contacts.
 
 Using this method you can delete multiple contacts, but only from a single page of results. If you navigate to the next page of results, previously checked contacts will no longer be part of your selection.
 
@@ -99,17 +106,15 @@ If you want to remove more contacts, leverage the Data Extension method shared b
 
 This method will be better if you want to remove significant number of contacts once, but don't want the hassle of the most powerful [API method](#sfmc-api-contact-deletion).
 
-1. Go to parent Business Unit
-2. Go to Audience Builder » Contact Builder
-3. Click All Contacts in top menu
-4. Without selecting any contact, click the trash icon
-5. Click Delete contacts from list / data extension depending on your needs
-6. Select the Sendable Data Extension used for Contact Deletion process
-7. Decide whether the Data Extension itself should stay in the system after the contacts are deleted
-8. Click Delete Contacts
-9. Review and confirm by clicking Delete
-
-You can monitor the Contact Deletion Process by clicking the trash icon in All Contacts and selecting View Pending Deletions.
+1. Go to parent Business Unit.
+2. Go to Audience Builder » Contact Builder.
+3. Click All Contacts in top menu.
+4. Without selecting any contact, click the trash icon.
+5. Click Delete contacts from list / data extension depending on your needs.
+6. Select the Sendable Data Extension used for Contact Deletion process.
+7. Decide whether the Data Extension itself should stay in the system after the contacts are deleted.
+8. Click Delete Contacts.
+9. Review and confirm by clicking Delete.
 
 :::note You Should Know
 
@@ -119,14 +124,283 @@ This method allows you to delete up to one million contacts per operation. If yo
 
 ### SFMC API Contact Deletion
 
+Previous methods are nice, but they require manual triggering in Salesforce Marketing cloud each time you want to run Contact Deletion Process. There are however many use cases where you might want to trigger it automatically - for example from a different system responsible for managing privacy.
+
+Thankfully, SFMC offers a solution for that as well with REST API. To implement it:
+
+1. Create authentication endpoint with correct permissions with Installed Package
+    1. Go to Setup.
+    2. Within Platform Tools section roll out Apps and click Installed Packages.
+    3. Click New in top right.
+    4. Provide a meaningful name and description for your Installed Package.
+    5. Add Component - API Integration.
+    6. Select Server-to-Server integration type.
+    7. Within Contacts section select Read and Write for List and Subscribers. Write is needed for Deletion. Read - for checking the deletion status.
+    8. Click Save.
+2. Copy Client Id, Client Secret and Client Base (the unique string in either of the API URIs that is between `https://` and api type).
+3. Leverage the contact deletion endpoint in the solution of your choice: `https://CLIENT_BASE.rest.marketingcloudapis.com/contacts/v1/contacts/actions/delete`.
+
+This single endpoint will allow you to trigger Contact Deletion process in three ways, by adding a query string at the end. All scenarios will use the same Method, Content Type and Authorization, but the endpoint and payload will be different:
+
+- Method: POST
+- Content Type: application/json
+- Authorization: Bearer TOKEN
+
+#### Contact Deletion by Contact ID
+
+Endpoint: `https://CLIENT_BASE.rest.marketingcloudapis.com/contacts/v1/contacts/actions/delete?type=ids`
+```json title="Delete by Contact ID Payload"
+{
+    "values": [1111111, 22222222],
+    "deleteOperationType": "ContactAndAttributes"
+}
+```
+
+The `values` for this endpoint is an array of Contact IDs (integers).
+
+#### Contact Deletion by Contact Key
+
+Endpoint: `https://CLIENT_BASE.rest.marketingcloudapis.com/contacts/v1/contacts/actions/delete?type=keys`
+
+```json title="Delete by Contact Key Payload"
+{
+    "values": ["A1B2C3D4", "E5F6G7H8"],
+    "deleteOperationType": "ContactAndAttributes"
+}
+```
+
+The `values` for this endpoint is an array of Contact Keys (strings).
+
+#### Contact Deletion using Data Extension
+
+Endpoint: `https://CLIENT_BASE.rest.marketingcloudapis.com/contacts/v1/contacts/actions/delete?type=listReference`
+```json title="Delete using Data Extension Payload"
+{
+    "deleteOperationType": "ContactAndAttributes",
+    "targetList": {
+        "listType": { "listTypeID": 3 },
+        "listKey": "contactDeletionDEKey"
+    },
+    "deleteListWhenCompleted": false,
+    "deleteListContentsWhenCompleted": true
+    }
+```
+
+In this endpoint you have control over three values:
+
+- `listKey`: the external key of the Data Extension you use for Contact Deletion process.
+- `deleteListWhenCompleted`: when `true`, it will delete the Data Extension during Contact Deletion process.
+- `deleteListContentsWhenCompleted`: when `true` it will delete records from the Data Extensions during Contact Deletion process.
+
 ### Contact Deletion with Automation Studio
+
+With the [API Contact Deletion](#sfmc-api-contact-deletion) we are not limited to external triggers. We can also leverage AMPScript or SSJS to trigger it directly from Marketing Cloud.
+
+The most popular use case for it is a Contact Deletion Automation that is scheduled to clean up the database on regular basis. It's great idea to keep your SFMC instance clean without much of a hassle.
+
+My recommended approach is to create a dedicated Pending Contact Deletion Shared Data Extension that will store records to-be-deleted along with some context and remove it's content nightly with the Script Activity.
+
+#### Pending Contact Deletion Data Extension
+
+If you want to capture contacts-to-be-deleted from multiple Business Units, make it Shared Data Extension.
+
+| Name | DataType | Default Value | Length | Nullable |
+|--|--|--|--|--|
+| 🔑 SubscriberKey | Text | | 18 | No |
+| DeletionReason | Text | | 50 | Yes |
+| DeletionDate | Date | Current date | | Yes |
+
+External Key: `contact-deletion-pending-de`
+Sendable: `true`
+
+For basic contact deletion you don't need anything but the Subscriber Key, however, I prefere to add a bit more context that I can leverage in the [Contact Deletion arhcive](#contact-deletion-archive) described later in this article.
+
+#### Contact Deletion Script Activity
+
+Below you can find ready-to-use SSJS snippet for Script Activity. Change `clietnSecret`, `clientID` and `clientBase` variables to data you saved during [Installed Package configuration](#sfmc-api-contact-deletion). If needed, change also the `contactDeletionDEKey`, `errorDE` and `automationName` variables to reflect your configuration.
+
+To learn more about `errorDE` check my [debugging guide](../ssjs/debugging-ssjs.mdx#error-logging). You will find there also details about [helper functions](../ssjs/debugging-ssjs.mdx#error-handler-function) from the script.
+
+```html title="Contact Deletion Script Activity SSJS Snippet"
+<script runat="server">
+    Platform.Load('core', '1')
+
+    /* -------------------------------------------------------------------------
+
+        1. Global Variables
+            1.1. Contact Deletion DE Key
+            1.2. REST API Authorization
+            1.3. Error Handling
+        2. Helper Functions
+            2.1. Debugging
+            2.2. Error handling
+        3. Main Script
+            3.1. REST API Authorization
+            3.2. Contact Deletion Process
+
+    -------------------------------------------------------------------------- */
+
+    /* ----------------------------------------------------------------------- */
+    /* ------------------------- 1. GLOBAL VARIABLES ------------------------- */
+    /* ----------------------------------------------------------------------- */
+
+    /* ------------------------ 1.1 Contact Deletion DE Key -------------------------- */
+
+    var contactDeletionDEKey = 'contact-deletion-pending-de';
+
+    /* ------------------------ 1.2 REST API Authorization --------------------------- */
+
+    var payload, endpoint, response;
+
+    var clientSecret = 'clientSecretFromInstalledPackage';
+    var clientID = 'clientIDFromInstalledPackage';
+    var clientBase = 'clientBaseUrl'
+    var contentType = 'application/json';
+    var debugging = false;
+
+
+    /* ------------------------ 1.3 Error Handling --------------------------- */
+
+    var errorDE = 'error-log-de';
+    var automationName = 'contact-deletion-process';
+
+
+    /* ----------------------------------------------------------------------- */
+    /* ------------------------- 2. HELPER FUNCTIONS ------------------------- */
+    /* ----------------------------------------------------------------------- */
+
+    /* --------------------------- 2.1. Debugging ---------------------------- */
+
+    /**
+    * @function debugValue
+    * @description Outputs provided description and SSJS value to front-end in a type-safe & consistent way
+    * @param {string} description - Describes meaning of the second parameter in the output
+    * @param {*} value - The value that needs to be debugged
+    */
+    function debugValue(description, value) {
+        Write(description + ': ' + (typeof value == 'object' ? Stringify(value) : value) + '<br><br>');
+    };
+
+    /* -------------------------- 2.2. Error handling ------------------------ */
+
+    /**
+     * @function handleError
+     * @description Adds the error with context to error logging Data Extension and redirects to error page.
+     * @param {Object} error - The caught error object. Can come from the try/catch block or be manually created.
+     * @param {string} error.message - First error key stores short error message describing the issue.
+     * @param {string} error.description - Second error key stores detailed error path helping with root cause analysis
+     */
+    function handleError(error) {
+        if (debugging) {
+            debugValue('Found error', error);
+        } else {
+            Platform.Function.InsertData(errorDE, ['ID', 'ErrorSource', 'ErrorMessage', 'ErrorDescription'], [GUID(), automationName, error.message, error.description]);
+        };
+    };
+
+
+    /* ----------------------------------------------------------------------- */
+    /* --------------------------- 3. MAIN SCRIPT ---------------------------- */
+    /* ----------------------------------------------------------------------- */
+
+    /* ------------------- 3.1. REST API Authorization --------------------- */
+
+    endpoint = 'https://' + clientBase + '.auth.marketingcloudapis.com/v2/token';
+    payload = {
+        client_id: clientID,
+        client_secret: clientSecret,
+        grant_type: 'client_credentials'
+    };
+    if (debugging) debugValue('Payload', payload);
+
+    try {
+        response = HTTP.Post(endpoint, contentType, Stringify(payload));
+    } catch (error) {
+        handleError(error);
+    }
+    var accessToken = Platform.Function.ParseJSON(response['Response'][0]).access_token;
+    if (debugging) debugValue('AccessToken', accessToken);
+
+    /* ------------------- 3.2. Contact Deletion Process --------------------- */
+
+    endpoint = 'https://' + clientBase + '.rest.marketingcloudapis.com/contacts/v1/contacts/actions/delete?type=listReference';
+    payload = {
+        deleteOperationType: 'ContactAndAttributes',
+        targetList: {
+            listType: { listTypeID: 3 },
+            listKey: contactDeletionDEKey
+        },
+        deleteListWhenCompleted: false,
+        deleteListContentsWhenCompleted: true
+    };
+    var headerNames = ['Authorization'];
+    var headerValues = ['Bearer ' + accessToken];
+
+    try {
+        response = HTTP.Post(endpoint, contentType, Stringify(payload), headerNames, headerValues);
+        if (debugging) debugValue('Response', response);
+
+    } catch (error) {
+        handleError(error);
+    }
+</script>
+```
+
+### Monitor Contact Deletion Process
+
+There are three ways to monitor what is happening with your Contact Deletion requesta (all should be performed from parent Business Unit):
+
+1. In Contact Builder in top menu click All Contacts. Click the trash icon in top right and select __View Pending Deletions__.
+2. In Contact Builder in top menu click Contact Analytics. You will see a full __Contact Deletion Dashboard__.
+3. Request details using [__Contact Deletion Details API__](https://developer.salesforce.com/docs/marketing/marketing-cloud/guide/ContactsDeleteRequestsDetails.html).
+
+----
 
 ## Which contacts should be deleted?
 
-## Enhanced Contact Deletion
+This question should be always aligned with the specific business needs of your company, however, there are some very popular segments that may inspire you.
 
-### Sync deletions with Salesforce CRM
+You can add them within the same Automation as the [Contact Deletion Script Activity](#contact-deletion-script-activity) to make sure they are captured right before cleanup. You may also create separate Automations on your child Business Unit to capture a BU-specific candidates for cleanup using data available only there.
 
-### Request deletion in child Business Units
+Remember to test those recommendations and queries (for example using [Query Studio](../sql/sfmc-sql-basics.mdx#query-studio)) before implementing them in your Contact Deletion Process, as even a small mistake might lead to irreversible data loss.
 
-### Archive deleted contacts with SQL
+### Contacts deleted in Salesforce CRM
+
+If you are using Marketing Cloud Connect to integrate your Salesforce CRM with the Marketing Cloud, you should definitely think about synchronizing deletions between those two systems. This does not happen automatically. By default, contacts deleted in SF CRM are removed only from Synchronized Data Extensions, but stay in all other tables of Marketing Cloud where they were added previously.
+
+You can however easily
+
+```sql title=""
+SELECT
+      subscriber.SubscriberKey
+    , 'Deleted in SFID' AS DeletionReason
+FROM _Subscribers AS subscriber
+    LEFT JOIN Contact_Salesforce AS contact
+        ON contact.Id = subscriber.SubscriberKey
+WHERE contact.Id IS NULL
+```
+
+
+----
+
+## Contact Deletion Archive
+
+| Name | DataType | Default Value | Length | Nullable |
+|--|--|--|--|--|
+| 🔑 SubscriberKey | Text | | 18 | No |
+| HashedEmail | Text | | 254 | Yes |
+| DeletionReason | Text | | 50 | Yes |
+| FirstDeletionDate | Date | Current date | | Yes |
+| LastDeletionDate | Date | | | No |
+
+```sql
+SELECT
+      pending.SubscriberKey
+    , CONVERT(NVARCHAR(128), HASHBYTES('SHA2_256', sub.EmailAddress), 2)    AS HashedEmail
+    , pending.DeletionReason
+    , pending.DeletionDate                                                  AS LastDeletionDate
+    , pending.Source
+FROM [contact-deletion-pending-de]   AS pending
+    INNER JOIN _Subscribers                             AS sub
+        ON sub.SubscriberKey = pending.SubscriberKey
+```
